# pywk99

./: .gitignore  LICENSE  README.md  environment.yml  pyproject.toml
.github/workflows/: test.yml
examples/: kth06.ipynb  lott14.ipynb  significance.ipynb  wk99.ipynb
examples/data/: download.ipynb
pywk99/: __init__.py
pywk99/composite/: __init__.py  composite.py  utils.py
pywk99/filter/: __init__.py  filter.py  plot.py  window.py
pywk99/grid/: __init__.py  grid.py  healpix.py
pywk99/spectrum/: __init__.py  _spectrum.py  background.py  plot.py  significance.py  spectrum.py
pywk99/timeseries/: __init__.py  fourier.py  timeseries.py
pywk99/waves/: __init__.py  plot.py  waves.py
tests/: olr.test.nc  test_filter.py  test_filter_healpix.py  test_filter_window.py  test_fourier.py  test_grid_healpix.py  test_spectrum.py  test_spectrum_backgroud.py  test_spectrum_healpix.py  test_spectrum_overlaping_time_intervals.py  test_timeseries.py  test_waves.py
